# flexpiler

./: LICENSE  README.md
flexpiler/: Cargo.toml  README.md
flexpiler/src/: lib.rs
flexpiler/src/block/: mod.rs
flexpiler/src/common/: mod.rs
flexpiler/src/common/reader/: buf_reader.rs  mod.rs  string.rs  transcribe.rs
flexpiler/src/common/rustc/: format.rs  mod.rs
flexpiler/src/common/rustc/block/: argument_end.rs  argument_end_or_separator.rs  argument_start.rs  constants.rs  context_denominator.rs  data_end_or_separator.rs  data_start.rs  declaration_or_data_end.rs  identifier.rs  identifier_with_data_start_finish.rs  identifier_with_variable_finish.rs  mod.rs  number.rs  string.rs
flexpiler/src/common/rustc/deserializer/: context.rs  mod.rs  option.rs  primitive_i32.rs  primitive_usize.rs  result.rs  string.rs  vec.rs
flexpiler/src/common/rustc/error/: mod.rs
flexpiler/src/deserializer/: context.rs  identity.rs  mod.rs
flexpiler/src/error/: expected_entries.rs  mod.rs  propagation.rs  stack_trace.rs
flexpiler/src/error/source/: common.rs  mod.rs
flexpiler/src/format/: mod.rs
flexpiler/src/identity/: mod.rs
flexpiler/src/parser/: error.rs  mod.rs
flexpiler/src/reader/: mod.rs
flexpiler_derive/: Cargo.toml  README.md
flexpiler_derive/src/: lib.rs
flexpiler_derive/src/core/: mod.rs
flexpiler_derive/src/core/definition/: enum_rustc.rs  mod.rs  struct_rustc.rs
flexpiler_derive/src/core/error/: mod.rs
flexpiler_derive/src/core/implementation/: flexpiler.rs  mod.rs
flexpiler_derive/src/core/implementation/data_context/: default_impl.rs  mod.rs  try_into_result_impl.rs
flexpiler_derive/src/core/implementation/deserializer/: error_context.rs  mod.rs
flexpiler_derive/src/core/intermediary/: data_context.rs  enum_rustc.rs  mod.rs  struct_rustc.rs
flexpiler_test/: Cargo.toml
flexpiler_test/src/: lib.rs
flexpiler_test/src/tests/: mod.rs
flexpiler_test/src/tests/automatic/: mod.rs
flexpiler_test/src/tests/manual/: mod.rs
(+32 files in other folders)
