[package]
name = "flexpiler"
version = "0.2.1"
authors = ["Erlan Dumah <erlan.dumah@yahoo.com>"]
edition = "2018"
description = "Deserialiser aiming at high customizability"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexpiler_derive = "0.2.1"
