[package]
name = "flexpiler_derive"
version = "0.1.0"
authors = ["Erlan Dumah <erlan.dumah@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

flexpiler = "0.1.0"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"